# annotation-switch

./: README.md  io.github.diegoivan.annotation_switch.json  meson.build
data/: io.github.diegoivan.annotation_switch.desktop.in  io.github.diegoivan.annotation_switch.gschema.xml  io.github.diegoivan.annotation_switch.metainfo.xml.in  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: ConversionPipeline.vala  ErrorDomains.vala  FormatRegistry.vala  annotation-switch.gresource.xml  application.vala  main.vala  meson.build  window.vala
src/Models/: Annotation.vala  Format.vala
src/Parser/: CocoParser.vala  FormatParser.vala  OIDv4Parser.vala  Yolo5OBBParser.vala  meson.build
src/Serializer/: FormatSerializer.vala  OIDv4Serializer.vala  Yolo5OBBSerializer.vala  meson.build
src/Transforms/: ClassMapping.vala  Denormalize.vala  LookupImage.vala  Normalize.vala  Transform.vala
src/Widgets/: FileChooserRow.vala  FormatSourceRow.vala
src/ui/: file-chooser-row.blp  format-source-row.blp  window.blp
